--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: s3-depl
+name: s3-deploy
 
 # Controls when the workflow will run
 on:
