--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,45 +3,39 @@ name: Deploy to S3
 on:
   push:
     branches:
-      - main # Change this to the appropriate branch name
+      - main # Change this to your main branch name
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+      - name: Set Up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14 # Use the Node.js version compatible with your project
 
+      - name: Install Dependencies
+        run: npm install
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: 14
-
-    - name: Install dependencies and build
-      env:
+      - name: Build React Application
+        env: 
           PORT: ${{secrets.PORT}}
           REACT_APP_API: ${{secrets.REACT_APP_API}}
-          REACT_APP_REDUX_SECRET_KEY: ${{ secrets.REACT_APP_REDUX_SECRET_KEY}}
-      run: |
-        npm install
-        npm run build
+          REACT_APP_REDUX_SECRET_KEY: ${{secrets.REACT_APP_REDUX_SECRET_KEY}}
+          
+        run: npm run build
 
-    - name: Deploy to S3
-      run: |
-        aws s3 cp build s3://${{ env.S3_ENVIRONMENT_BUCKET }}/${{ env.Project }}/${{ env.Service }}/ --recursive
-
-env:
-  S3_ENVIRONMENT_BUCKET: ${{ secrets.S3_ENVIRONMENT_BUCKET }}
-  Project: "frontend" # Change this to your project name
-  Service: "service" # Change this to your service name
-  ENVIRONMENT_FILE: "period-app-env"
-
+      - name: Deploy to S3
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --follow-symlinks --delete
+        env: 
+          AWS_S3_BUCKET: new-period-bucket
+          AWS_REGION: us-east-1
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          SOURCE_DIR: build/ # This is the directory where your React build files are located
